# orderbook

./: Cargo.toml  readme.md
examples/: bench_alignment.rs  bench_hugepages.rs  bench_latency.rs  bench_market_order.rs  bench_prefetch.rs  benchmark_latency.rs  scenario_buildup.rs  scenario_bursty.rs  scenario_clustered.rs  scenario_clustered_mid.rs  scenario_high_cancel.rs  scenario_steady_state.rs  scenario_sweep.rs  scenario_uniform.rs  scenario_uniform_random_dist.rs  scenario_zipfian.rs
examples/real/: 01_scenario_high_cancel.rs
results/: bench_latency.csv  scenario_clustered.csv  scenario_steady_state.csv
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/orderbook/: mod.rs  orderbook.rs
src/orderbook/SoA/: orderbook.rs
src/orderbook/fixed_tick/: orderbook.rs
src/orderbook/hybrid/: orderbook.rs
src/orderbook/tree/: orderbook.rs
src/perf/: latency.rs  mod.rs  rdtsc.rs
src/types/: mod.rs  order.rs  price.rs  quantity.rs  resolution.rs
tests/: correctness.proptest-regressions  correctness.rs
