[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
#performance
perf-event = "0.4.8"
criterion = "0.8.1"
#data structures
arrayvec = "0.7.6"
smallvec = "1.15.1"
#utilities
rand = "0.9.2"
rand_distr = "0.5.1"
serde = "1.0.228"
serde_json = "1.0.147"
#analysis
csv = "1.4.0"
proptest = "1.9.0"
